Changes in 1.7
 
 - Fix incorrect cursorpos for resizable windows on Windows Vista (found and patched by buffer)

 - Change the beginScene window parameter from void* to SExposedVideoData&. This will allow to manage contexts for OpenGL at some point.

 - Add bzip2 and LZMA decompression modes for zip loader.

 - Add OBJ_TEXTURE_PATH and B3D_TEXTURE_PATH to SceneParameters to allow setting texture-paths for obj and b3d.

 - Irrlicht keeps now filenames additionaly to the internally used names, thereby fixing some problems with uppercase-filenames on Linux.

 - Bugfix: Mousewheel no longer sends EMIE_MOUSE_WHEEL messages twice on Linux.

 - refactoring: E_ATTRIBUTE_TYPE and IAttribute have now own headers

 - CStringWArrayAttribute speedup

 - SceneNodeAnimatorFollowSpline can now loop and pingpong

 - Meshviewer.example got some fast-scale buttons.

 - Support AES-encrypted zip files. Should work with 128, 196, and 256 bit AES. This addition also adds a new PRNG, SHA, and other algorithms to the engine, though no interface is yet added for them. The implementation of the encryption algorithms is provided by Dr Brian Gladman.

 - Added geometry shaders for OpenGL. A first version of the code was submitted by Matthew Kielan (devsh).

 - Bugfix: irrArray should no longer crash when using other allocators.

 - Add MaterialViewer example.

 - Checkbox uses now disabled text color when disabled.

 - Changed colors for window-title caption to keep them readable when not active.

 - Draw sub-menus to left side if they would be outside main-window otherwise.

 - Give ListBox better defaults for the ScrollBar stepsizes.

 - Double and triple click events now for each mouse-button. Old events for that got removed.

 - Fix adding archives twice, which caused multiple archives of the same name and type covering each other. This one required a texture name change from using backslashes to slahes under Windows.
